# test_task

./: .env.example  .gitignore  APP_ANALYSIS.md  DEPENDENCY_ANALYSIS.md  Dockerfile  GARBAGE_DETECTION_TEST_RESULTS.md  INGESTION_ANALYSIS.md  ISI.doc  ISI2.docx  OPENSEARCH_SETUP.md  README.md  RUN.md  TESTING.md  api.py  check_records.py  chunks_verification.txt  clear_databases.py  codex_test1.docx  config.py  database_report_extracted.html  database_report_full.html  delete_document.py  diagnose_qdrant.py  docker-compose.opensearch.yml  docker-compose.yml  draft.txt  extract_report.py  generate_full_report.py  google_drive_listener.py  index_fixed.html  index_to_opensearch.py  main.py  main_draft.py  main_test.py  pages_test_fitz.txt  process_new_documents_test.py  pyproject.toml  raw_test.txt  remove_test_files.sh  requirements.txt  (+13 more)
database/: __init__.py  database.py
docs/: chunking_cheatsheet.md  hybrid_chunking_guide.md
frontend/: index.html  script.js  style.css
services/: __init__.py  document_processor.py  google_drive.py  rag_pipeline.py  vectorization.py
src/: codex2.md  config.py  process_new_documents_test.py
src/app/: logging_config.py  main.py
src/app/dependencies/: context.py  rag.py  websocket_manager.py
src/app/routers/: chat.py
src/database/: __init__.py  database.py  exported_chunks_doc1.txt  exported_chunks_doc2.txt  models.py
src/legacy/telegram_bot/: bot.py
src/prompts/: deepseek.md  default.md  gemini.md
src/scripts/: create_qdrant_index.py
src/services/: __init__.py  chunking_service.py  context_manager.py  document_deleter.py  document_parser.py  document_processor.py  document_processor_service.py  failed_pages_logger.py  google_drive.py  opensearch_client.py  page_processing_utils.py  rag_service.py  rag_service_opensearch.py  redis_service.py  retry_utils.py  text_preprocessor.py  vectorization.py
src/static/css/: style.css
src/templates/: index.html
telegram_bot/: bot.py
test_documents/: test_document.docx  test_document.txt
