[project]
name = "test-task"
version = "0.1.0"
description = ""
authors = [
    {name = "Andrei-KV",email = "a.v.kovalev9@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "langchain-text-splitters (>=1.0.0,<2.0.0)",
    "pytelegrambotapi (>=4.29.1,<5.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "schedule (>=1.2.2,<2.0.0)",
    "asyncpg (>=0.29.0,<1.0.0)",
    "redis (>=7.0.1,<8.0.0)",
    "tiktoken (>=0.12.0,<0.13.0)",
    "nltk (>=3.8.1,<4.0.0)",
    "google-genai (>=1.49.0,<2.0.0)",
    "unstructured[all-docs]>=0.14.0",
    "python-magic (>=0.4.27,<0.5.0)",
    "google-api-python-client",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
