[project]
name = "test-task"
version = "0.1.0"
description = ""
authors = [
    {name = "Andrei-KV",email = "a.v.kovalev9@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"

[tool.poetry.dependencies]
python = ">=3.12,<3.15"

# Core Framework
"fastapi" = ">=0.121.2,<0.122.0"
"uvicorn" = ">=0.38.0,<0.39.0"
"python-dotenv" = ">=1.2.1,<2.0.0"

# Database & Storage
"sqlalchemy" = ">=2.0.44,<3.0.0"
"asyncpg" = ">=0.29.0,<1.0.0"
"redis" = ">=7.0.1,<8.0.0"
"opensearch-py" = "^3.1.0"

# Document Processing
"PyMuPDF" = ">=1.24.0,<2.0.0"
"pytesseract" = ">=0.3.10,<0.4.0"
"Pillow" = ">=10.0.0,<11.0.0"
"pypandoc" = ">=1.15,<2.0"
"pandoc" = ">=2.4,<3.0"
"python-docx" = "^1.2.0"
"striprtf" = "^0.0.29"
"pandas" = ">=2.3.3,<3.0.0"
"openpyxl" = ">=3.1.5,<4.0.0"
"xlrd" = ">=2.0.2,<3.0.0"
"markdown" = ">=3.9,<4.0"
"beautifulsoup4" = ">=4.14.2,<5.0.0"
"pdf2image" = "^1.17.0"

# Text Processing
"tiktoken" = ">=0.12.0,<0.13.0"
"nltk" = ">=3.8.1,<4.0.0"

# AI/ML
"torch" = {version = ">=2.0.0,<3.0.0", source = "pytorch-cpu"}
"google-genai" = ">=1.49.0,<2.0.0"
"google-api-python-client" = ">=2.187.0,<3.0.0"
"huggingface-hub" = ">=0.34.0,<1.0"
"sentence-transformers" = ">=2.2.0,<4.0.0"
"openai" = ">=1.0.0,<2.0.0"

# Utilities
"tenacity" = "^8.2.3"
"aiohttp" = "^3.13.2"
"grpcio" = ">=1.76.0,<2.0.0"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
